# jetvec

./: CMakeLists.txt  README.md  bootstrap_jetvec.sh
.github/workflows/: ci.yml
include/: api.h  mmio.h
jetvec/include/: distance.h  util_crc64.h
jetvec/src/: cli.c  distance.c  distance_avx2.c  distance_scalar.c  util_crc64.c
src/: api.c  mmio.c
tests/: test_distance.c
